fix build error in integration-test